<resources>
    <string name="app_name">OrderingMealsTestTask</string>

    <!--    bottom menu-->
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="basket">Basket</string>
    <string name="profile">Profile</string>

    <!--    button-->
    <string name="retry">Retry</string>

    <!--    list-->
    <string name="empty_list">List is empty</string>

    <!--    Empty fragments-->
    <string name="screen_in_development">Screen in development…</string>

    <!--    Dish detail-->
    <string name="add_to_basket">Add to basket</string>
    <string name="price">%1$d &#8381;</string>
    <string name="weight"> &#183; %1$dg</string>
    <string name="like_icon_button">Like icon button</string>
    <string name="close_icon_button">Close icon button</string>

    <!--    Basket-->
    <string name="pay_basket">Pay %1$s &#8381;</string>
    <string name="increment_dish">Increment dish</string>
    <string name="decrement_dish">Decrement dish</string>

</resources>