<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/dishDetailImageView"
            android:layout_width="311dp"
            android:layout_height="232dp"
            android:background="?attr/colorTertiary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/closeDishDetailImageButton"
            style="@style/roundedImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/close_icon_button"
            android:src="@drawable/dish_detail_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck,ImageContrastCheck" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/likeDishDetailImageButton"
            style="@style/roundedImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/like_icon_button"
            android:src="@drawable/dish_detail_like"
            app:layout_constraintEnd_toStartOf="@+id/closeDishDetailImageButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleDishDetailTextView"
            style="?attr/textAppearanceSubtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dishDetailImageView"
            tools:text="Рыба с овощами и рисом" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/priceDishDetailTextView"
            style="?attr/textAppearanceSubtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDishDetailTextView"
            tools:text="799 &#8381;" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/weightDishDetailTextView"
            style="?attr/textAppearanceSubtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black_alpha_40"
            app:layout_constraintStart_toEndOf="@+id/priceDishDetailTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleDishDetailTextView"
            tools:ignore="TextContrastCheck"
            tools:text=" &#183; 560г" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descriptionDishDetailTextView"
            style="?attr/textAppearanceSubtitle2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="9"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceDishDetailTextView"
            tools:text="Рыба маринованная со специями, лимонным соком, соевым соусом и запечeнная в духовке с лучком, томатами и картошечкой под золотистой майонезно-сырной шубкой" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToBasketButton"
            style="@style/AppButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_to_basket"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionDishDetailTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>